--- a/admin/css/custom.css
+++ b/admin/css/custom.css
@@ -64,3 +64,112 @@
 .top_link>a:hover {
     opacity: 1;
 }
+
+ .general_setting {
+    margin:15px 0;
+    padding: 10px;
+    border: 1px solid #80808050;
+    border-radius: 5px;
+    transition: .2s;
+}
+ .general_setting:hover {
+    background: #80808050;
+}
+
+.general_setting ul li {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.general_setting ul li h3 {
+    font-size: 20px;
+    opacity: .6;
+} 
+
+
+
+
+
+
+label {
+    display: flex;
+    align-items: center;
+  }
+
+  .general_setting ul li input {
+    opacity: 0;
+
+} 
+  input:checked ~ span {
+    background: #2563EB;
+  }
+  
+  input:checked ~ span:after {
+    left: 28px;
+    background: whitesmoke;
+  }
+  
+  input:checked ~ span:active::after {
+    left: 17px;
+    background: whitesmoke;
+  }
+  
+  input:not(:checked) ~ span:active {
+    background: #a3a3a3;
+  }
+  
+  input:not(:checked) ~ span:active::after {
+    background: rgb(248, 248, 248);
+  }
+  
+  .toggle_background {
+    display: flex;
+    align-items: center;
+    width: 58px;
+    height: 32px;
+    position: relative;
+    cursor: pointer;
+    background: #babacc;
+    border-radius: 2em;
+    border: 2px transparent solid;
+    transition: all 0.3s;
+  }
+  
+  /* ---- toggle switching cricle design code ---- */
+  .toggle_background::after {
+    content: "";
+    display: flex;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 0px;
+    top: 1px;
+    border-radius: 50px;
+    background: #f0f5f9;
+    transition: all 0.3s;
+    box-shadow: 2px 2px 5px rgba(110, 110, 110, 0.253);
+  }
+  
+  span:active:after {
+    width: 70%;
+  }
+  
+  /* circle and vertical line in toggle background code */
+  .circle-icon {
+    position: absolute;
+    right: 15%;
+    border: solid 2px rgb(95, 95, 95);
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+  }
+  
+  .vertical_line {
+    position: absolute;
+    left: 22%;
+    background: rgb(241, 241, 241);
+    width: 2px;
+    height: 8px;
+  }
+  
