--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -135,7 +135,19 @@
     border-radius: 5px;
     width: 100%;
 }
-
+.reseller_note{
+    text-align: justify;
+    width: 100%;
+    height: 400px;
+    padding: 10px;
+    overflow: auto;
+    box-shadow: inset 2px 0px 5px gray;
+}
+.checkbox{
+    width: 20px;
+    height: 20px;
+    margin: 20px 0;
+}
 
 
 
